--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    </head>
+
+    <body>
+        <div class="nav">
+            <ul>
+                <li class="mizuki"><a href="#mizuki">Mizuki</a></li>
+                <li><a href="#courses">Courses</a></li>
+                <li class="right"><a href="#hire">Hire Me</a></li>
+            </ul>
+        </div>
+        
+        <div class="content">
+            <h1>I will never work for someone. I'll have someone work for me.</h1>
+            <div class="img-container">
+                <img class='cat' src='images/cat-image.jpg' alt='cat'>
+            </div>
+            <p>Here's where you're at right now.</p>
+            <p>You have a powerful message that you want to share with the world.</p>
+            <p>You have a product or service that's successful and gets your customers results.</p>
+            <p>But if your people are winning, why aren't you winning on a scale you're supposed to be winning?</p>
+            <p>What's stopping you from getting the entire world to know you?</p>
+            <p>Your problem is not that your funnel isn't working, you have low conversions, your positioning is off, your copy sucks, or that your service isn't valuable.</p>
+            <p>Your #1 problem is obscurity. Your problem is getting the world to know you, your products, and your services.</p>
+            <h2>It's time to stop competing and dominate your market.</h2>
+            <p>But first, let me ask you a question.</p>
+            <p>When you think of enterpreneurship... Who's the first guy that comes to mind? (Gary Vee).</p>
+            <p>When you think of sales... Who's the first person that comes to mind? (Grant Cardone).</p>
+            <p>When you think of personal development... Who's the first person that comes to mind? (Tony Robbins).</p>
+            <p>...And when you think you look up how to code, you won't get very far without coming across me :).</p>
+            <p>Look, you need to be in a place in your market where when someone has a need, you're the first and only person that should come to your potential customer's mind.</p>
+            <p>Now the question is, how do you build that relationship with your audience where you're always the first person to come in their mind?</p>
+            <p>Let me first tell you what won't work.</p>
+            <p>Blogging for optimized keyword terms or SEO.</p>
+            <p>Focusing on the best tags or titles on your YouTube video.</p>
+            <p>Going to local networks to pass your business cards.</p>
+            <p>You already know this, just saying it anyway.</p>
+            <p>Now, here is what Will work.</p>
+            <p>First you need a product or service that the world needs (you already got this part down).</p>
+            <p>Second, you need to build trust and authentic relationship with your audience.</p>
+            <p>People like Gary Vee, Grant Cardone, Tony Robbins, or anyone else who's dominating their market, are dominating that market for one reason and one reason only. Trust.</p>
+            <p>They've built businesses that will last the test of time. Even way after they die.</p>
+            <p>Everyone is always looking for a *unique selling proposition*. if you have an audience of raving fans that trust you, you don't need to be unique. Harley Davidson doesn't need to be unique to sell bikes. Gary Vee just wrote a sequel to *Crush it* called *Crushing It!*. Doesn't sound very uniques to me. But, do you think he sold a s*** load of copies? I thinks so.</p>
+            <p>That's tha place I want you to be. In a place where you're the ONLY one who is the first and the right choice for your customer.</p>
+            <p>Now, let's say we want to build an authentic connection with our audience and customers... How should we do it? The best way would be to meet these people in person. Face to face. Just you and them. They can see your passion, feel your energy, and get their questions answered. You can get them to see you as an authority, build a strong relationship with you, and they might even purchase your product or service on the spot.</p>
+            <p>But... that might be a little difficult and harder to scale.</p>
+            <p>Hmm... Okay let's try another way. Public speaking. When you speak on a stage in front of select audiences, there's nothing better than building authority, establishing a relationship, and growing your business. But, when your talk is over... It's over. If I wanted to share your message with someone, it wouldn't be very easy for me to do.</p>
+            <p>Landing public speaking engagements at events like Converkit, T&C, or Growthcon are already a difficult task and even if you can land them, there is only a limited number of them you can do. Also, your message is only limited to that room, instead of the whole world.</p>
+            <p>Now what if you could build your authority, establish an authentic relationship with your audience, and sell more of what you have to your potential customers. And you could do this all in a way that feels like you're speaking face to face with them whre they can still feel your presence, energy, and get incredible amounts of value from your content. And it doesn't matter what part of the world they're in.</p>
+            <p>This is the power of video marketing.</p>
+            <p>This is what I do.</p>
+            <p>I help you build your authority, overcome obscurity, scale your business, and build an audience of ideal buyers for your products or services by leveraging the power of video marketing through YouTube.</p>
+            <p>Just to be clear. This is not about making viral cat videos. Ad revenue. Affiliate marketing. Selling t-shirts. Or using tags, description, or SEO to rank #1 on YouTube.</p>
+            <p>I help smart online marketers & successful business owners who want to build trust with their audience and scale their business leveraging YouTube.</p>
+            <p>It's really weird that no-one is teaching this stuff. Most people are just teaching you how to get more subscribers, likes, and comments on YouTube with videos like "Learn how to get your first 1000 subscribers FAST in 2017"</p>
+            <p>I want to show you how to use YouTube as not just a powerful growth strategy but a system that automate your business so that your leads are consistent, growth is systemis, and revenue is reliable.</p>
+            <p>I also have a special gift for you.</p>
+            <p>I want to show you behind the scenes on how I've leveraged YouTube to build a business from scratch that has generated over $450,000 in less than 15 months...</p>
+            <p>Disclaimer: This juicy lead magnet is under construction. Bud don't worry, for now, get on my email list. Grab some popcorn. Kick up your recliner. And when it's ready, I'll shoot it straight over <3</p>
+            <h2>How I leveraged YouTube to Generate $450k in 15 months for My Business from Scratch...</h2>
+            <form action="/" method="POST">
+                <div class="input-group">
+                    <input type="email" class="form-control" placeholder="Email Address">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button">Yes,Gimme!</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </body>
+</html>
